--- a/src/main/java/de/mosmann/topics/basics/components/ComponentOverviewPage.html
+++ b/src/main/java/de/mosmann/topics/basics/components/ComponentOverviewPage.html
@@ -36,4 +36,6 @@
 	<wicket:container wicket:id="fragment"></wicket:container>
 	
 	<wicket:fragment wicket:id="source">ooohooW</wicket:fragment>
+	
+	<img wicket:id="img">
 </wicket:extend>
